2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update version number to 0.2.
	* configure.ac: Increment version number.
	* src/Makefile.am: Update version-info.
	* tests/visualization-gnuplot-function.stdout,
	* tests/visualization-gnuplot-simple.stdout:
	Regenerate from reference.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement plug-in mechanism.
	* .gitignore: Do not allow libltdl to be committed.
	* Makefile.am: Remove packages, add libltdl from SUBDIRS.
	* build-aux/argz.m4: New.
	* build-aux/init.mk: Restyle.
	* build-aux/ltdl.m4: New.
	* configure.ac: Search for libltdl.
	* include/Makefile.am: Add new headers.
	* include/roboptim/core/derivable-function.hh:
	Rename from include/roboptim-core/derivable-function.hh.
	* include/roboptim/core/function.hh:
	Rename from include/roboptim-core/function.hh.
	* include/roboptim/core/fwd.hh:
	Rename from include/roboptim-core/fwd.hh.
	* include/roboptim/core/generic-solver.hh:
	Rename from include/roboptim-core/generic-solver.hh.
	* include/roboptim/core/indent.hh:
	Rename from include/roboptim-core/indent.hh.
	* include/roboptim/core/linear-function.hh:
	Rename from include/roboptim-core/linear-function.hh.
	* include/roboptim/core/n-times-derivable-function.hh:
	Rename from include/roboptim-core/n-times-derivable-function.hh.
	* include/roboptim/core/n-times-derivable-function.hxx:
	Rename from include/roboptim-core/n-times-derivable-function.hxx.
	* include/roboptim/core/numeric-linear-function.hh:
	Rename from include/roboptim-core/numeric-linear-function.hh.
	* include/roboptim/core/numeric-quadratic-function.hh:
	Rename from include/roboptim-core/numeric-quadratic-function.hh.
	* include/roboptim/core/plugin/dummy.hh:
	Rename from include/roboptim-core/dummy.hh.
	* include/roboptim/core/problem.hh:
	Rename from include/roboptim-core/problem.hh.
	* include/roboptim/core/problem.hxx: